# tjsamples

./: .gitignore  README.md  clean.sh  patch.sh
android/BottomNavigationViewsTemplate/: settings.gradle.kts
android/BottomTabNavigationWithCompose/: settings.gradle.kts
android/Cam/: README
android/CameraXTutorial/: README.md  settings.gradle.kts
android/DataStoreExample/: README.md  (+1 more)
angular/: README.md
anthropic/: README.md
architect/: REAME.md
asm/: README.md
autotools/: README.md
babashka/: README.md
babel/: README.md
bazel/: README.md
bison/: README.md
box2d/: README.md
caffe/: Makefile.config.python3  README.md
cgi/: README.md  hello.cgi
cl/: README.md
clojure/: README.md  clj.bat
clojurescript/: README.md  cljs  cljs.bat
cmake/external-project/: CMakeLists.txt  README.md  main.c
cmake/libhello/: CMakeLists.txt  README.md  build.sh  hello.pc.in
cmake/libhello/example/: .gitignore  CMakeLists.txt  Makefile  main.c
cmake/libhello/src/: CMakeLists.txt  hello.h
cmake/libhello/test/: CMakeLists.txt  test.c
cocoapods/: README.md
coffee/: README.md
cordova/: README.md
cpputest/cmake/: CMakeLists.pkgconfig.txt  CMakeLists.txt  README.md
cpputest/cmake/src/: hello.c  hello.h
cpputest/cmake/tests/: CMakeLists.pkgconfig.txt  CMakeLists.txt  RunAllTests.cpp
cpputest/cmake/tests/hello/: HelloTest.cpp
css/: color-transition.css  flex.html  screen_size.html
cuda/: README.md
cython/: README.md
d/: README.md
dart/: README.md
dbus/: README.md
deno/: README.md
docker/: README.md
elastic/: README.md  docker-compose.yml
electron/: README.md
erlang/: README.md
expressjs/: README.md
filament/: README.md
flex/: README.md
flutter/: README.md
glib/: README.md
go/: README.md
gradle/: README.md
groovy/: README.md
grpc/: README.md
gtk/: README.md
hdf5/: README.md
hsqldb/: README.md
ionic/: README.md
java/: README  README.md
javascript/: README.md
julia/: README.md
kafka/: README.md
kafka/clients/python/kafka-python-example/: consumer.py  producer.py  pyproject.toml
kotlin/: README.md
libev/: README.md
libevent/: README.md
libssh/: README.md
linux/: boot-image.md
lisp/: README.md
llvm/: README.md  version.sh
lua/: README.md
maven/: README.md
mcp/: README.md
meson/: README.md
messagepack/: README.md
minio/clients/python/myapp/: main.py  pyproject.toml
mongodb/: README.md
mono/: README.md
mysql/: README.md
ncurses/: README.md
nestjs/: README.md
netlify/: README.md
netty/: README.md
nextjs/: README.md
ninja/: README.md
nodejs/: README.md
opencv/: README.md
org-mode/: README.md  checkbox.org  image.html  image.org  image.tex  link.org  lord-of-rings.org  sample.org  table.org
php/: README.md
postgresql/: README.md
powershell/: README.md
prisma/: README.md
protobuf/: README.md
python/: .gitignore  README.md  version.py
qt/: .gitignore
react/: README  README.md
react-native/: README.md
react-native-windows/: README.md
reactivex/: README.md
redis/: README.md
remix/: README.md
rest/: README.md
ruby/: README.md
rust/: README.md
scala/: README.md
scrapy/: Makefile  README.md
sdl2/: README.md
sfml/: README.md
shell/: README.md
slack/: requirements.txt  sendslack.py
socketio/: README.md
sockjs/: README.md
solidjs/: README.md
svelte/: README.md
swagger/: README.md
swift/: README  README.md  run.bat
tauri/: README.md
tcltk/: README.md  environment.tcl  ex2.tcl  notebook.tcl
thrift/: README.md  version.sh
tmux/: README.md
toml/: README.md
typescript/: README.md
vagrant/: README.md
vala/: README.md
vim/: README.md  file.txt
vite/: README.md
vscode/: README.md
vue/: README  README.md  component.html  index.html  open.sh
web/: README.md
webpack/: README.md
websocket/: README.md
xtdb/: README.md
(+6676 files in other folders)
