[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["bjtj <bjtj10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
minio = "^7.1.7"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
